@@ -5,8 +5,8 @@ jEdit 5.0 version history
 {{{ Version 5.0pre1
 
 Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
-Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl and Jarek Czekalski
-for contributing to this release.
+Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
+and Jarek Czekalski for contributing to this release.
 
 {{{ Bug fixes
 
@@ -70,6 +70,10 @@ for contributing to this release.
 
 }}}
 {{{ Editing
+
+- "velocity_pure.xml" edit mode to replace older sgml-based velocity.xml.
+   Velocity keywords nested within markup tags incorrecly highlighted.
+   (#1285741 - Robert Schwenn)
 
 - Updated D edit mode (#3463009 - Olivier Pisano)
 
